# hpx-kokkos-resilience

./: CMakeLists.txt  LICENSE  README.md
src/hkr/: hpx-kokkos-resiliency-cpos.hpp  hpx-kokkos-resiliency-executor.hpp  hpx-kokkos-resiliency.hpp  kokkos-execution-space.hpp  kokkos-executor.hpp  replay-execution-space.hpp  replicate-execution-space.hpp  traits.hpp  util.hpp
src/hkr/executor/: returning-executor.hpp
tests/: CMakeLists.txt  async_replay.cpp  async_replay_device.cpp  async_replay_host.cpp  async_replicate_device.cpp  async_replicate_host.cpp  returning_executor.cpp
tests/performance/: CMakeLists.txt  async_replay.cpp  async_replicate.cpp  experimental_replay.cpp  experimental_replicate.cpp  kokkos_execution_space.cpp  kokkos_parfor_vs_hpxkokkos.cpp  perf_comp.cpp  plain_async.cpp  stencil.cpp  stencil_old.cpp
tests/unit/: CMakeLists.txt  async_replay_device.cpp  async_replay_host.cpp  bulk_async.cpp  experimental_replay.cpp  experimental_replicate.cpp  kokkos_execution_space.cpp
